--- a/Enc2Dec.ipynb
+++ b/Enc2Dec.ipynb
@@ -245,8 +245,8 @@
         "###email data \n",
         "subject = \"crypted data from frive to you\"\n",
         "body = \"This is an email with attachment sent from Python\"\n",
-        "sender_email = \"maroubenm225@gmail.com\"\n",
-        "receiver_email = \"benmoussa.marouanee@gmail.com\"\n",
+        "sender_email = \"ma*****@gmail.com\"\n",
+        "receiver_email = \"be*****@gmail.com\"\n",
         "  \n",
         "try: \n",
         "    print(\"enter email app code ! \")\n",
