--- a/Enc2Dec.ipynb
+++ b/Enc2Dec.ipynb
@@ -267,7 +267,7 @@
         "# Encrypt_(destination_file, input_folder , key)\n",
         "\n",
         "\n",
-        "FileWanted = 'Bosma.txt'\n",
+        "FileWanted = '****.txt'\n",
         "Decryption_(destination_file, input_folder,FileWanted , password, key, send_mail) \n",
         "\n",
         "key = \" \"\n",
